# Tamagotchi-Server

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.md   CLAUDE.md  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
plan/: plan-a.md  plan-b.md  plan-backend.md  plan-c.md
server/: .env.example  bench_pipeline.py  db.py  main.py  pyproject.toml  requirements.txt  run_dev.py  schemas.py  test_api.py  test_pipeline.py  test_robustness.py
server/chat/: __init__.py  engine.py  prompts.py  router.py  session.py  stt.py  tts.py  voice_router.py
server/mission/: data.py  router.py  service.py  test_service.py
server/report/: router.py
