[project]
name = "sonju-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "python-multipart",
    "pytest",
    "httpx",
    "faster-whisper",
    "ollama",
    "melotts",
    "setuptools",
]

[tool.uv.sources]
melotts = { git = "https://github.com/myshell-ai/MeloTTS.git" }
