[project]
name = "sonju-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "python-multipart",
    "psycopg2-binary",
    "pytest",
    "httpx",
    "faster-whisper",
    "ollama",
    "melotts",
    "setuptools<80",
    "python-mecab-ko>=1.3.7",
    "anthropic>=0.117.0",
]

[tool.uv.sources]
melotts = { git = "https://github.com/myshell-ai/MeloTTS.git" }
