[project]
name = "sonju-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "python-multipart",
    "psycopg2-binary",
    "anthropic>=0.117.0",
    "faster-whisper",
    "melotts",
    "setuptools<80",
    "python-mecab-ko>=1.3.7",
]

[tool.uv.sources]
melotts = { git = "https://github.com/myshell-ai/MeloTTS.git" }
